fix: chrome flickering on position fixed

--- a/components/menu-page/main-menu/menu.css
+++ b/components/menu-page/main-menu/menu.css
@@ -12,3 +12,8 @@
   width: 100%;
   padding-top: 35px;
 }
+
+.translateZ-class {
+  /* transform: translateZ(0); */
+  -webkit-transform: translateZ(0);
+}
